--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -36,7 +36,8 @@
   --Personal-colors-green-hover: #6bda62;
   --Personal-colors-Click: #efe6ff;
   --Personal-colors-Error: rgba(254, 52, 48, 0.99);
-  --black-10: rgba(0, 0, 0, 0.1) --Orange: #ffa04f;
+  --black-10: rgba(0, 0, 0, 0.1);
+  --Orange: #ffa04f;
 
   --Text-sample: #a3a0a0;
   --Sub-text: #4d4d4d;
