--- a/src/features/catalog/catalogCard/UI/styles.module.scss
+++ b/src/features/catalog/catalogCard/UI/styles.module.scss
@@ -56,15 +56,21 @@
         justify-content: center;
         justify-items: center;
 
-        img {
+        &__img_wrapper {
           width: 80px;
           height: 80px;
           border-radius: 50%;
+          overflow: hidden;
           border: 0.5px solid var(--Personal-colors-main);
 
           @media (max-width: 768px) {
             width: 60px;
             height: 60px;
+          }
+
+          img {
+            width: 100%;
+            height: 100%;
           }
         }
 
