--- a/src/features/channel/channelDescription/UI/styles.module.scss
+++ b/src/features/channel/channelDescription/UI/styles.module.scss
@@ -1,16 +1,15 @@
 .button {
-  padding: 10px;
-  font-size: 20px;
+  font-size: var(--font-size-option-item-xl);
   font-style: normal;
   font-weight: 500;
-  line-height: 1;
+  text-transform: uppercase;
 }
 
 .content {
   display: grid;
   grid-template: 1fr / 1fr 1.2fr;
-  width: 75vh;
-  height: 550px;
+  width: 50vw;
+  max-height: 60svh;
 
   &__left {
     display: grid;
@@ -23,7 +22,7 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    padding: 25px 30px 30px 30px;
+    padding: 30px;
 
     .top {
       display: grid;
@@ -35,11 +34,12 @@
         align-items: center;
         text-align: start;
         word-break: break-all;
+
         p {
           color: var(--Personal-colors-main);
           font-size: 24px;
           font-style: normal;
-          font-weight: 600;
+          font-weight: 500;
           line-height: 1;
         }
       }
@@ -58,13 +58,18 @@
           justify-content: start;
 
           .logo {
+            border: 5px solid var(--Personal-colors-White);
+            border-radius: 50%;
+            width: 80px;
+            height: 80px;
+            overflow: hidden;
+
             img {
-              border: 5px solid var(--Personal-colors-White);
-              border-radius: 50%;
-              width: 100px;
-              height: 100px;
+              width: 100%;
+              height: 100%;
             }
           }
+
           .channel {
             display: grid;
             grid-auto-flow: row;
@@ -95,8 +100,15 @@
           font-size: 12px;
           font-style: normal;
           font-weight: 500;
-          line-height: 1;
+
+          p {
+            overflow: hidden;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 3;
+          }
         }
+
         .platform {
           display: grid;
           grid-template: 1fr / 1fr 3fr;
@@ -114,7 +126,20 @@
             font-size: 14px;
             font-style: normal;
             font-weight: 600;
-            line-height: 1;
+
+            @media (max-width: 576px) {
+              font-weight: 500;
+            }
+
+            .icon {
+              width: 20px;
+              height: 20px;
+
+              svg {
+                width: 20px;
+                height: 20px;
+              }
+            }
           }
 
           a {
@@ -122,7 +147,10 @@
             font-size: 14px;
             font-style: normal;
             font-weight: 600;
-            line-height: 1;
+
+            @media (max-width: 576px) {
+              font-weight: 500;
+            }
           }
         }
       }
@@ -131,10 +159,15 @@
     .bottom {
       display: grid;
       align-items: end;
+      background: rgba(255, 255, 255, 0.5);
+      backdrop-filter: blur(10px);
+      padding: 12px 15px;
+      border-radius: 12px;
+      box-shadow: 0px 2px 10px 1px rgba(115, 15, 126, 0.2);
 
       &__formats {
         display: grid;
-        grid-template: 1fr / 1fr 1fr 1fr;
+        grid-auto-flow: row;
         row-gap: 20px;
         align-items: start;
         column-gap: 10px;
@@ -142,21 +175,17 @@
         .format {
           display: grid;
           grid-auto-flow: row;
-          row-gap: 15px;
+          row-gap: 10px;
           align-items: center;
-          text-align: center;
+          text-align: start;
 
           &__name {
-            border-radius: 8px;
-            border: 1px solid var(--Personal-colors-main);
-            background: var(--Personal-colors-White);
-            padding: 10px;
             p {
               color: var(--Personal-colors-main);
-              font-size: 16px;
+              font-size: 12px;
               font-style: normal;
-              font-weight: 500;
-              line-height: 1;
+              font-weight: 600;
+              text-transform: uppercase;
             }
           }
 
@@ -175,16 +204,17 @@
   &__right {
     display: grid;
     grid-auto-flow: row;
-    padding: 20px 30px;
-    position: relative;
+    padding: 30px;
     align-items: center;
     align-content: space-between;
+    gap: 20px;
 
     &__top {
       display: grid;
       position: absolute;
       top: 20px;
       right: 30px;
+
       svg {
         width: 15px;
         height: 15px;
@@ -193,8 +223,28 @@
 
     .buttons {
       display: grid;
-      grid-template: 1fr / 1fr 1fr;
-      column-gap: 10px;
+
+      .edit_btn {
+        width: 100%;
+        box-shadow: 0px 2px 10px 1px rgba(0, 0, 0, 0.2);
+        color: var(--Personal-colors-main);
+        padding: 10px 15px;
+        border-radius: 12px;
+        font-weight: 600;
+
+        transition: all 300ms ease;
+
+        &:hover {
+          background: var(--Gradients-Gradient-1);
+          color: #fff;
+          transform: scale(1.015);
+          transition: all 300ms ease;
+        }
+
+        @media (max-width: 576px) {
+          font-weight: 500;
+        }
+      }
     }
 
     .channel__parameters {
@@ -203,7 +253,7 @@
       grid-auto-flow: row;
       row-gap: 20px;
 
-      .parameter {
+      .parametr {
         display: grid;
         grid-template: 1fr / 1fr 1.5fr;
         column-gap: 10px;
@@ -213,19 +263,22 @@
         align-items: center;
 
         p {
-          padding: 10px 0;
+          padding: 10px 10px 10px 0px;
           color: var(--Personal-colors-black);
           font-size: 14px;
           font-style: normal;
           font-weight: 600;
-          line-height: 1;
+          line-height: 1.2;
         }
+
         span {
           color: var(--Personal-colors-black);
           font-size: 14px;
           font-style: normal;
           font-weight: 500;
-          line-height: 1;
+          line-height: 1.5;
+          max-height: 5vw;
+          overflow: auto;
         }
 
         &__sex {
