--- a/src/widgets/cart/components/createPost/UI/styles.module.scss
+++ b/src/widgets/cart/components/createPost/UI/styles.module.scss
@@ -29,10 +29,17 @@
   }
 
   @media (max-width: 576px) {
-    border-radius: 10px;
+    border-radius: 0px;
     padding: 15px;
-    bottom: 10px;
-    margin: 0px 10px;
+    bottom: 0px;
+    margin: 0px -20px;
+  }
+
+  @media (max-width: 375px) {
+    border-radius: 0px;
+    padding: 15px;
+    bottom: 0px;
+    margin: 0px -10px;
   }
 
   .icon {
@@ -213,8 +220,9 @@
           font-size: 18px;
         }
 
-        @media (max-width: 375px) {
-          font-size: 16px;
+        @media (max-width: 576px) {
+          font-weight: 500;
+          font-size: 14px;
         }
       }
     }
