--- a/src/widgets/channel/myChannels/activeChannels/card/UI/styles.module.scss
+++ b/src/widgets/channel/myChannels/activeChannels/card/UI/styles.module.scss
@@ -22,11 +22,22 @@
         grid-auto-flow: row;
         row-gap: 10px;
 
-        img {
+        &__img_wrapper {
           width: 80px;
           height: 80px;
           border-radius: 50%;
+          overflow: hidden;
           border: 0.5px solid var(--Personal-colors-main);
+
+          @media (max-width: 768px) {
+            width: 60px;
+            height: 60px;
+          }
+
+          img {
+            width: 100%;
+            height: 100%;
+          }
         }
 
         svg {
@@ -207,6 +218,7 @@
       }
     }
   }
+
   .card__btn {
     display: grid;
     grid-auto-flow: column;
@@ -228,10 +240,26 @@
 
   .platform__events {
     display: grid;
-    grid-template: 1fr /1fr 1fr 1fr;
+    grid-template: 1fr / 1fr 1fr 1fr;
     column-gap: 20px;
-    padding: 0 20px;
-    border-radius: 12px;
-    border-top: 1px solid var(--Gradients-Gradient-1);
+    padding: 20px;
+
+    > button {
+      border-radius: 12px;
+      box-shadow: 0px 2px 10px 1px rgba(0, 0, 0, 0.2);
+      font-size: var(--font-size-option-item-xl);
+      font-weight: 500;
+      text-transform: uppercase;
+      color: var(--Personal-colors-main);
+      transition: all 300ms ease;
+      padding: 12px 10px;
+
+      &:hover {
+        background: var(--Gradients-Gradient-1);
+        color: #fff;
+        transform: scale(1.015);
+        transition: all 300ms ease;
+      }
+    }
   }
 }
