--- a/src/pages/layouts/components/header/UI/dropdownMenu/UI/menuItem/styles.module.scss
+++ b/src/pages/layouts/components/header/UI/dropdownMenu/UI/menuItem/styles.module.scss
@@ -15,13 +15,19 @@
 
     li {
       padding: 10px 20px;
-      border-radius: 12px;
-      border-left: 1px solid #000;
+      // border-radius: 12px;
+      // border-left: 1px solid #000;
       cursor: pointer;
       font-size: 14px;
       font-style: normal;
       font-weight: 500;
       line-height: 1;
+
+      display: grid;
+      grid-auto-flow: column;
+      justify-content: start;
+      align-items: center;
+      gap: 5px;
 
       &:hover {
         background-color: #f0f0f0;
