--- a/src/entities/channel/ui/information/description/UI/styles.module.scss
+++ b/src/entities/channel/ui/information/description/UI/styles.module.scss
@@ -135,7 +135,7 @@
       font-size: 14px;
       font-style: normal;
       font-weight: 500;
-      line-height: 1;
+      line-height: normal;
       grid-area: item3;
     }
 
