--- a/src/entities/channel/ui/information/parameters/UI/styles.module.scss
+++ b/src/entities/channel/ui/information/parameters/UI/styles.module.scss
@@ -26,7 +26,7 @@
       font-size: 14px;
       font-style: normal;
       font-weight: 600;
-      line-height: 1;
+      line-height: normal;
     }
 
     .parameter__sex {
