--- a/src/features/catalog/catalogCard/components/description/ui/styles.module.scss
+++ b/src/features/catalog/catalogCard/components/description/ui/styles.module.scss
@@ -1,18 +1,20 @@
 .description {
   position: relative;
+  min-height: 75px;
 
   &__text {
     color: var(--Subtitle-text);
     font-size: 12px;
     font-style: normal;
     font-weight: 600;
-    line-height: 1.5; // Убедись, что это значение соответствует реальному
+    line-height: 1.5;
     word-break: break-word;
     overflow: hidden;
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 3;
     transition: max-height 0.3s ease-in-out;
+    // height: calc(4 * 1.5em);
 
     &.expanded {
       -webkit-line-clamp: unset;
