--- a/src/features/channel/recommendCard/skeleton/styles.module.scss
+++ b/src/features/channel/recommendCard/skeleton/styles.module.scss
@@ -1,10 +1,11 @@
 .card {
   display: grid;
   grid-auto-flow: row;
-  grid-template: 6fr 1fr / 1fr;
+  grid-template: 1fr 40px / 1fr;
   height: 100%;
   border-radius: 15px;
   box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.2);
+  min-height: 340px;
 
   .channel {
     display: grid;
@@ -14,7 +15,7 @@
 
     &__top {
       display: grid;
-      grid-template: 1fr / 1fr 3fr 2fr;
+      grid-template: 1fr / min-content 1fr min-content;
       column-gap: 20px;
 
       .column__info {
@@ -31,7 +32,7 @@
         .rating {
           display: grid;
           grid-auto-flow: column;
-          column-gap: 10px;
+          column-gap: 5px;
           justify-content: start;
         }
       }
@@ -41,6 +42,11 @@
         grid-auto-flow: column;
         column-gap: 10px;
       }
+    }
+    &__description {
+      display: grid;
+      grid-auto-flow: row;
+      row-gap: 5px;
     }
   }
 }
