--- a/src/features/project/zeroProject/UI/styles.module.scss
+++ b/src/features/project/zeroProject/UI/styles.module.scss
@@ -1,24 +1,44 @@
+.wrapper {
+  display: grid;
+  align-items: flex-start;
+}
+
 .no__project {
   display: grid;
   grid-auto-flow: row;
   justify-content: center;
   align-items: center;
-  row-gap: 60px;
-  margin-bottom: 170px;
+  row-gap: 50px;
 }
 
 .buttons {
   display: grid;
-  grid-auto-flow: column;
+  grid-template: 1fr/ 1fr min-content 1fr;
   justify-content: center;
   align-items: center;
   column-gap: 25px;
 
   p {
-    font-size: 14px;
+    font-size: 20px;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
+  }
+
+  @media (max-width: 992px) {
+    grid-template: unset;
+    grid-auto-flow: row;
+    row-gap: 10px;
+    text-align: center;
+    p {
+      font-size: 18px;
+    }
+  }
+
+  @media (max-width: 768px) {
+    p {
+      font-size: 16px;
+    }
   }
 }
 
@@ -48,5 +68,27 @@
   svg {
     width: 185px;
     height: 185px;
+  }
+
+  @media (max-width: 992px) {
+    svg {
+      width: 160px;
+      height: 160px;
+    }
+
+    p {
+      font-size: 20px;
+    }
+  }
+
+  @media (max-width: 768px) {
+    svg {
+      width: 120px;
+      height: 120px;
+    }
+
+    p {
+      font-size: 14px;
+    }
   }
 }
