--- a/src/widgets/wallet/transactions/components/guide/UI/styles.module.scss
+++ b/src/widgets/wallet/transactions/components/guide/UI/styles.module.scss
@@ -27,27 +27,28 @@
 }
 
 .accordion {
+  background: var(--Personal-colors-White);
+  box-shadow: 0px 1px 4px 1px var(--Personal-colors-main);
+  border-radius: 20px;
+
   .item {
     display: grid;
     grid-auto-flow: row;
-    row-gap: 10px;
 
     .trigger {
       display: grid;
       grid-auto-flow: column;
       column-gap: 10px;
-      justify-content: center;
+      justify-content: space-between;
       align-items: center;
       align-content: center;
       padding: 15px;
       cursor: pointer;
       border-radius: 12px;
       transition: all 300ms ease;
-      box-shadow: 0px 3px 5px 0px rgba(71, 114, 230, 0.6);
-      background: var(--Gradients-Gradient-1);
 
       .title {
-        color: var(--Personal-colors-White);
+        // color: var(--Personal-colors-White);
         font-size: 12px;
         font-style: normal;
         font-weight: 600;
@@ -58,7 +59,26 @@
 
     .content {
       padding: 10px;
-      margin: 10px;
     }
+  }
+}
+
+.arrow {
+  display: grid;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  border-radius: 50%;
+  background: var(--Personal-colors-White, #fff);
+  box-shadow:
+    0px -2px 16px 0px rgba(0, 0, 0, 0.08),
+    0px 6px 14px 0px rgba(0, 0, 0, 0.08);
+  width: 40px;
+  height: 40px;
+}
+
+.active {
+  .arrow {
+    background: var(--Gradients-Gradient-1) !important;
   }
 }
