--- a/src/widgets/catalog/components/catalogList/parametersFilter/UI/styles.module.scss
+++ b/src/widgets/catalog/components/catalogList/parametersFilter/UI/styles.module.scss
@@ -69,40 +69,72 @@
   display: grid;
   grid-auto-flow: row;
   row-gap: 30px;
-  padding: 30px 0;
+  // padding: 30px 0;
+  padding-bottom: 30px;
   border-radius: 20px;
 }
 
-.recommendation {
+.item {
   display: grid;
   grid-auto-flow: row;
-  row-gap: 20px;
-  align-items: center;
 
-  &__title {
+  .trigger {
     display: grid;
     grid-auto-flow: column;
     column-gap: 10px;
+    justify-content: space-between;
     align-items: center;
-    justify-content: center;
+    align-content: center;
+    padding: 15px;
+    cursor: pointer;
+    border-radius: 12px;
+    transition: all 300ms ease;
 
-    p {
-      font-size: 16px;
-      font-style: normal;
-      font-weight: 600;
-      line-height: normal;
-      color: var(--Personal-colors-main);
-    }
+    .title {
+      display: grid;
+      grid-auto-flow: column;
+      column-gap: 10px;
+      align-items: center;
+      justify-content: start;
 
-    svg {
-      width: 26px;
-      height: 26px;
+      p {
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+        color: var(--Personal-colors-main);
+      }
+      svg {
+        width: 26px;
+        height: 26px;
+      }
     }
   }
 
-  &__cards {
+  .content {
     display: grid;
     grid-auto-flow: row;
     row-gap: 20px;
+    padding: 10px;
+  }
+}
+
+.arrow {
+  display: grid;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  border-radius: 50%;
+  background: var(--Personal-colors-White, #fff);
+  box-shadow:
+    0px -2px 16px 0px rgba(0, 0, 0, 0.08),
+    0px 6px 14px 0px rgba(0, 0, 0, 0.08);
+  width: 40px;
+  height: 40px;
+}
+
+.active {
+  .arrow {
+    background: var(--Gradients-Gradient-1) !important;
   }
 }
