--- a/src/features/communication/notification/notificationCard/UI/styles.module.scss
+++ b/src/features/communication/notification/notificationCard/UI/styles.module.scss
@@ -54,9 +54,9 @@
       font-weight: 500;
       line-height: 1;
 
-      @media (max-width: 768px) {
-        text-align: center;
-      }
+      // @media (max-width: 768px) {
+      //   text-align: start;
+      // }
     }
 
     .text {
