--- a/src/widgets/adminPanel/channels/UI/styles.module.scss
+++ b/src/widgets/adminPanel/channels/UI/styles.module.scss
@@ -33,7 +33,7 @@
   }
 
   .table {
-    padding: 50px 0;
+    overflow: hidden;
     border-radius: 16px;
     background: var(--color-whites-White, #fff);
     box-shadow: 0px 2px 12px 0px rgba(0, 0, 0, 0.2);
