--- a/src/widgets/adminPanel/channels/channelsList/card/UI/styles.module.scss
+++ b/src/widgets/adminPanel/channels/channelsList/card/UI/styles.module.scss
@@ -8,13 +8,14 @@
   .top {
     display: grid;
     grid-template-columns: repeat(5, 1fr) max-content;
-    column-gap: 10px;
+    column-gap: 20px;
     padding: 15px 20px;
+    min-height: 70px;
 
     .info {
       display: grid;
       grid-template-columns: max-content 1fr;
-      column-gap: 10px;
+      column-gap: 20px;
       align-content: center;
 
       .logo {
@@ -58,6 +59,10 @@
     .column {
       display: grid;
       align-items: center;
+
+      &.user {
+        cursor: pointer;
+      }
 
       p {
         color: var(--Personal-colors-black, #000);
