--- a/src/widgets/adminPanel/reviews/UI/styles.module.scss
+++ b/src/widgets/adminPanel/reviews/UI/styles.module.scss
@@ -33,9 +33,25 @@
   }
 
   .table {
-    padding: 50px 0;
     border-radius: 16px;
     background: var(--color-whites-White, #fff);
     box-shadow: 0px 2px 12px 0px rgba(0, 0, 0, 0.2);
+    display: grid;
+    grid-auto-flow: row;
+    overflow: hidden;
+
+    .filter {
+      display: grid;
+      justify-content: flex-end;
+      padding: 20px;
+
+      li {
+        padding: 10px 20px;
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+      }
+    }
   }
 }
