--- a/src/widgets/adminPanel/reviews/reviewsList/UI/styles.module.scss
+++ b/src/widgets/adminPanel/reviews/reviewsList/UI/styles.module.scss
@@ -1,4 +1,48 @@
 .wrapper {
   display: grid;
   grid-auto-flow: row;
+
+  .bar {
+    display: grid;
+    column-gap: 20px;
+    padding: 15px 20px;
+    min-height: 70px;
+    background: var(--color-whites-White, #fff);
+    box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.1);
+
+    &.wait {
+      grid-template-columns: repeat(3, 1fr) 0.5fr 60px;
+    }
+
+    &.accept {
+      grid-template-columns: repeat(4, 1fr) repeat(2, 0.75fr) 60px;
+    }
+
+    .column {
+      display: grid;
+      align-items: center;
+      align-content: center;
+      text-align: start;
+
+      p {
+        color: var(--color-blacks-b-40, rgba(0, 0, 0, 0.4));
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+      }
+    }
+  }
+
+  .show_more {
+    button {
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: normal;
+      width: 100%;
+      background: #fff;
+      border-radius: unset;
+    }
+  }
 }
