--- a/src/widgets/adminPanel/reviews/reviewsList/card/UI/styles.module.scss
+++ b/src/widgets/adminPanel/reviews/reviewsList/card/UI/styles.module.scss
@@ -1,10 +1,18 @@
 .wrapper {
   display: grid;
-  grid-template-columns: repeat(3, 1fr) 0.5fr max-content;
   column-gap: 20px;
   background: var(--Personal-colors-White, #fff);
   box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.1);
-  padding: 20px;
+  padding: 15px 20px;
+  min-height: 80px;
+
+  &.wait {
+    grid-template-columns: repeat(3, 1fr) 0.5fr max-content;
+  }
+
+  &.accept {
+    grid-template-columns: repeat(4, 1fr) repeat(2, 0.75fr) max-content;
+  }
 
   .id {
     display: grid;
@@ -22,7 +30,7 @@
   }
 
   .platform,
-  .sender {
+  .user {
     display: grid;
     grid-auto-flow: column;
     justify-content: start;
@@ -44,7 +52,8 @@
     .info {
       display: grid;
       grid-auto-flow: row;
-      align-content: space-between;
+      row-gap: 10px;
+      align-content: center;
 
       p {
         color: var(--Personal-colors-black, #000);
@@ -82,5 +91,10 @@
       font-weight: 500;
       line-height: normal;
     }
+  }
+
+  .last {
+    display: grid;
+    align-content: center;
   }
 }
