--- a/src/widgets/adminPanel/transactions/transactionsList/card/UI/styles.module.scss
+++ b/src/widgets/adminPanel/transactions/transactionsList/card/UI/styles.module.scss
@@ -7,8 +7,9 @@
   .top {
     display: grid;
     grid-template-columns: repeat(8, 1fr) max-content;
-    column-gap: 10px;
+    column-gap: 20px;
     padding: 15px 20px;
+    min-height: 70px;
 
     .column {
       display: grid;
