--- a/src/widgets/adminPanel/users/usersList/card/UI/styles.module.scss
+++ b/src/widgets/adminPanel/users/usersList/card/UI/styles.module.scss
@@ -1,11 +1,11 @@
 .wrapper {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(5, 1fr) max-content;
   column-gap: 20px;
-  align-items: center;
   background: var(--Personal-colors-White, #fff);
   box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.1);
-  padding: 15px;
+  padding: 15px 20px;
+  min-height: 70px;
 
   .click {
     cursor: pointer;
