--- a/src/pages/layouts/components/footer/UI/styles.module.scss
+++ b/src/pages/layouts/components/footer/UI/styles.module.scss
@@ -2,7 +2,6 @@
   background: var(--Gradients-Gradient-5);
   color: #fff;
   width: 100%;
-  min-height: 20vh;
 
   > section {
     display: grid;
@@ -15,7 +14,7 @@
     }
 
     @media (max-width: 576px) {
-      row-gap: 40px;
+      row-gap: 20px;
       padding: 30px 20px;
     }
 
@@ -45,6 +44,7 @@
           display: flex;
           justify-content: center;
           align-items: center;
+          font-size: 60px;
         }
       }
 
@@ -57,6 +57,7 @@
         @media (max-width: 576px) {
           grid-auto-flow: row;
           justify-content: center;
+          gap: 10px;
         }
 
         &__item {
@@ -101,6 +102,7 @@
 
       @media (max-width: 576px) {
         grid-template: auto auto / 1fr;
+        row-gap: 20px;
       }
 
       .nav {
@@ -116,6 +118,8 @@
         @media (max-width: 576px) {
           grid-template: none;
           grid-auto-flow: row;
+          gap: 20px;
+          padding-top: 20px;
         }
 
         &__block {
@@ -143,6 +147,7 @@
 
             @media (max-width: 992px) {
               text-align: center;
+              padding-left: 0;
             }
           }
         }
@@ -160,6 +165,11 @@
           border-top: 1px solid #fff;
         }
 
+        @media (max-width: 576px) {
+          padding-top: 20px;
+          gap: 20px;
+        }
+
         &__item {
           display: flex;
           flex-direction: column;
@@ -169,6 +179,10 @@
           > h4 {
             font-size: 22px;
             font-weight: 600;
+
+            @media (max-width: 576px) {
+              font-size: 18px;
+            }
           }
 
           > p {
@@ -218,6 +232,7 @@
       @media (max-width: 576px) {
         font-size: 12px;
         font-weight: 400;
+        padding-top: 30px;
       }
     }
   }
