--- a/src/features/channel/deactivateChannel/UI/styles.module.scss
+++ b/src/features/channel/deactivateChannel/UI/styles.module.scss
@@ -5,6 +5,18 @@
   row-gap: 20px;
   padding: 30px;
   position: relative;
+  max-width: 50vw;
+
+  @media (max-width: 992px) {
+    max-width: 80vw;
+  }
+
+  @media (max-width: 576px) {
+    max-width: 90vw;
+    padding: 20px 0px;
+
+    font-size: 12px;
+  }
 
   &__top {
     padding: 20px;
@@ -18,6 +30,11 @@
       position: absolute;
       top: 15px;
       right: 15px;
+
+      @media (max-width: 576px) {
+        top: 10px;
+        right: 10px;
+      }
 
       svg {
         width: 30px;
