--- a/src/widgets/createOrder/components/createOrderPost/UI/styles.module.scss
+++ b/src/widgets/createOrder/components/createOrderPost/UI/styles.module.scss
@@ -232,21 +232,21 @@
             display: block;
           }
 
-          .content {
-            max-width: 300px;
-            gap: 0;
-            background-color: transparent;
-            display: grid;
-            align-items: center;
-            justify-content: center;
-            box-shadow: none;
-            border: none;
-            width: 50vw;
+          // .content {
+          //   max-width: 300px;
+          //   gap: 0;
+          //   background-color: transparent;
+          //   display: grid;
+          //   align-items: center;
+          //   justify-content: center;
+          //   box-shadow: none;
+          //   border: none;
+          //   width: 50vw;
 
-            @media (max-width: 475px) {
-              width: 60vw;
-            }
-          }
+          //   @media (max-width: 475px) {
+          //     width: 60vw;
+          //   }
+          // }
 
           .see_post_btn {
             display: grid;
