--- a/src/features/profile/editEmail/UI/styles.module.scss
+++ b/src/features/profile/editEmail/UI/styles.module.scss
@@ -86,7 +86,7 @@
       font-style: normal;
       font-weight: 400;
       line-height: 1;
-      cursor: pointer;
+      cursor: text;
 
       &::placeholder {
         color: #a3a0a0;
