--- a/src/widgets/profile/settingsProfile/UI/styles.module.scss
+++ b/src/widgets/profile/settingsProfile/UI/styles.module.scss
@@ -185,7 +185,7 @@
             font-style: normal;
             font-weight: 400;
             line-height: 1;
-            cursor: pointer;
+            cursor: text;
 
             &::placeholder {
               color: #a3a0a0;
@@ -193,6 +193,12 @@
               font-style: normal;
               font-weight: 400;
               line-height: 1;
+            }
+
+            &.email {
+              color: gray;
+              background: rgb(243, 243, 243);
+              cursor: not-allowed;
             }
           }
         }
