--- a/src/shared/ui/infoTooltip/styles.module.scss
+++ b/src/shared/ui/infoTooltip/styles.module.scss
@@ -1,9 +1,18 @@
+.trigger {
+  transition: all 0.3s ease;
+  &:hover {
+    transform: scale(1.1);
+  }
+}
+
 .content {
   max-width: 300px;
+
   .text {
     font-size: 12px;
     font-weight: normal;
     line-height: normal;
     text-align: justify;
+    text-indent: 40px;
   }
 }
