--- a/src/widgets/wallet/transactions/components/creditCard/styles.module.scss
+++ b/src/widgets/wallet/transactions/components/creditCard/styles.module.scss
@@ -224,6 +224,7 @@
       justify-content: center;
       align-items: center;
       justify-self: start;
+      justify-items: start;
 
       p,
       span {
@@ -244,6 +245,14 @@
         font-weight: 600;
         line-height: 1;
       }
+
+      @media (max-width: 576px) {
+        row-gap: 5px;
+
+        p, span {
+          font-size: 10px;
+        }
+      }
     }
 
     .fee_include {
@@ -262,7 +271,7 @@
         line-height: 1;
 
         @media (max-width: 576px) {
-          text-align: center;
+          font-size: 12px;
         }
       }
     }
