--- a/src/features/createOrder/createOrder/ui/styles.module.scss
+++ b/src/features/createOrder/createOrder/ui/styles.module.scss
@@ -28,7 +28,7 @@
     grid-auto-flow: row;
     align-content: space-between;
 
-    .top {
+    .wallets_choose {
       padding: 0 25px;
       display: grid;
       grid-auto-flow: row;
@@ -40,12 +40,6 @@
         font-style: normal;
         font-weight: 500;
         line-height: 1;
-      }
-
-      .wallets {
-        display: grid;
-        grid-template-rows: repeat(2, 1fr);
-        row-gap: 10px;
       }
     }
 
