--- a/src/features/other/priceList/buyTarif/UI/styles.module.scss
+++ b/src/features/other/priceList/buyTarif/UI/styles.module.scss
@@ -171,6 +171,20 @@
     //   height: calc(100dvh - 85.5px - 68px);
     // }
     padding: 40px 25px 20px 25px;
+
+    .wallets_choose {
+      display: grid;
+      grid-auto-flow: row;
+      row-gap: 30px;
+
+      .subtitle {
+        color: var(--Personal-colors-black, #000);
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 1;
+      }
+    }
   }
 
   .tarif {
