--- a/src/shared/ui/wallet-deposit-card/styles.module.scss
+++ b/src/shared/ui/wallet-deposit-card/styles.module.scss
@@ -3,6 +3,7 @@
   grid-auto-flow: row;
   row-gap: 15px;
   padding: 20px 10px;
+  width: 100%;
 
   border-radius: 24px;
   background: radial-gradient(
@@ -15,6 +16,13 @@
 
   &.active {
     box-shadow: inset 0px 0px 2px 2px rgba(0, 0, 0, 0.25);
+  }
+
+  &:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+    pointer-events: none;
+    background: #c3c3c3; // светло-серый фон
   }
 
   .header {
@@ -55,6 +63,7 @@
     display: grid;
     grid-auto-flow: row;
     row-gap: 8px;
+    justify-items: start;
 
     .description {
       font-size: 8px;
